--- a/Trabalho1CG/glade/window_main.glade
+++ b/Trabalho1CG/glade/window_main.glade
@@ -155,7 +155,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <child>
-                  <object class="GtkButton" id="button1">
+                  <object class="GtkButton" id="btn_in">
                     <property name="label" translatable="yes">In</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
@@ -164,6 +164,7 @@
                     <property name="margin_left">30</property>
                     <property name="resize_mode">immediate</property>
                     <property name="relief">half</property>
+                    <signal name="clicked" handler="on_btn_in_clicked" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -172,11 +173,12 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkButton" id="button2">
+                  <object class="GtkButton" id="btn_out">
                     <property name="label" translatable="yes">Out</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
+                    <signal name="clicked" handler="on_btn_out_clicked" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -291,7 +293,7 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkEntry" id="entry2">
+                  <object class="GtkEntry" id="in_name">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                   </object>
@@ -309,7 +311,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkNotebook" id="notebook1">
+              <object class="GtkNotebook" id="tabs">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="margin_left">5</property>
@@ -348,7 +350,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkEntry" id="entry1">
+                          <object class="GtkEntry" id="x_point">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                           </object>
@@ -371,7 +373,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkEntry" id="entry3">
+                          <object class="GtkEntry" id="y_point">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                           </object>
@@ -434,7 +436,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkEntry" id="entry4">
+                          <object class="GtkEntry" id="x0_str_line">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                           </object>
@@ -457,7 +459,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkEntry" id="entry5">
+                          <object class="GtkEntry" id="y0_str_line">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                           </object>
@@ -503,7 +505,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkEntry" id="entry6">
+                          <object class="GtkEntry" id="x1_str_line">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                           </object>
@@ -526,7 +528,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkEntry" id="entry7">
+                          <object class="GtkEntry" id="y1_str_line">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                           </object>
