--- a/Trabalho1CG/src/window_main.glade
+++ b/Trabalho1CG/src/window_main.glade
@@ -255,6 +255,7 @@
             <property name="height_request">500</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="tooltip_text" translatable="yes">Area de desenho</property>
             <property name="hexpand">False</property>
             <property name="vexpand">False</property>
           </object>
@@ -973,7 +974,7 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkEntry" id="angulo">
+                      <object class="GtkEntry" id="entry_angulo">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                       </object>
